--- a/index.html
+++ b/index.html
@@ -14,15 +14,20 @@
         <p>por jeferson ferreira</p>
     </header>
     <main>
-        <p id="contador"></p>
-        <table>
-            <tr>
-                <th></th>
-            </tr>
-            <tbody id="tarefas">
-
-            </tbody>
-        </table>
+        <form>
+            <input type="text" id="caixaDeEntrada" />
+            <input type="button" onclick="" value="ADICIONAR" />
+        </form>
+        <section id="areaBotoes">
+            <button onclick="" >Urgente</button>
+            <button onclick="" >Importante</button>
+            <button onclick="" >Normal</button>
+            <button onclick="" >Feito</button>
+        </section>
+        <section id="areaSelecaoParaExclusao">
+        </section>
+        <section id="areaLista">
+        </section>
     </main>
     <footer>
         <p>Todos os direitos reservados @ <a href="https://github.com/jeferson0993">jeferson ferreira</a> - Palmas/TO - 2019</p>
