alterado o codigo, adicionado ids, classes e evetos nos botoes

--- a/index.html
+++ b/index.html
@@ -1,36 +1,48 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Todo list</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="main.js"></script>
+  <meta charset="utf-8">
+  <title>Javascript CRUD App</title>
+  <meta name="view-port" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="main.css">
+  <script src="main.js"></script>
 </head>
+
 <body>
-    <header>
-        <h1>lista de tarefas / Conteúdo de estudos</h1>
-        <p>por jeferson ferreira</p>
-    </header>
-    <main>
-        <form>
-            <input type="text" id="caixaDeEntrada" />
-            <input type="button" onclick="" value="ADICIONAR" />
-        </form>
-        <section id="areaBotoes">
-            <button onclick="" >Urgente</button>
-            <button onclick="" >Importante</button>
-            <button onclick="" >Normal</button>
-            <button onclick="" >Feito</button>
-        </section>
-        <section id="areaSelecaoParaExclusao">
-        </section>
-        <section id="areaLista">
-        </section>
-    </main>
-    <footer>
-        <p>Todos os direitos reservados @ <a href="https://github.com/jeferson0993">jeferson ferreira</a> - Palmas/TO - 2019</p>
-    </footer>
+
+  <header>
+    <h1>lista de tarefas / Conteúdo de estudos</h1>
+    <p>por jeferson ferreira</p>
+  </header>
+
+  <main>
+    <form>
+      <input type="text" id="conteudo" />
+      <input type="button" onclick="inserir()" value="ADICIONAR" />
+    </form>
+    <section id="areaBotoes">
+      <input type="button" onclick="" value="Urgente" id="urgente"/>
+      <input type="button" onclick="" value="Importante" id="importante"/>
+      <input type="button" onclick="" value="Normal" class="normal"/>
+      <input type="button" onclick="" value="Feito" id="feito"/>
+    </section>
+    <section id="areaSelecaoParaExclusao">
+      <p>
+        <input type="checkbox" id="selecionaTudo" onchange="selecinoarTudo()">
+        <b>Seleção para atualização do status</b>
+      </p>
+      <input type="button" onclick="excluir()" value="Excluir" class="normal"/>
+    </section>
+    <section id="areaLista">
+    </section>
+  </main>
+  
+  <footer>
+    <p>Todos os direitos reservados @ <a href="https://github.com/jeferson0993">jeferson ferreira</a> - Palmas/TO -
+      2019</p>
+  </footer>
+
 </body>
+
 </html>
